# Portafolio

./: README.md  main.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: animations.js
templates/: base.html  index.html
