[project]
name = "portafolio"
version = "0.2.0"
description = "Personal portfolio from Juan Salazar Dev, this SPA is used to expose all the development that i have along all my way in this development world"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
